[package]
name = "napi-dynamic-sys"
version = "0.1.0"
authors = ["Renée Kooi <renee@kooi.me>"]
edition = "2018"
repository = "https://github.com/neon-bindings/neon"
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
libloading = "0.6.2"
lazy_static = "1.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi"] }

[build-dependencies]
bindgen = { version = "0.54.1", git = "https://github.com/goto-bus-stop/rust-bindgen", rev = "58b579bb" }
